--- a/Web API/appsettings.json
+++ b/Web API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "engin@engin.com",
+    "Issuer": "engin@engin.com",
+    "AccessTokenExpiraiton": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
